--- a/css/slider-pro.css
+++ b/css/slider-pro.css
@@ -408,6 +408,11 @@
 		width: 18px;
 		height: 18px;
 	}
+	.sp-slides-container {
+	position: relative;
+	height:700px;
+	background: #1b1b1b;
+}
 }
 
 /* Arrows
